assignment2/src/main/mp/parser/main/mp/parser/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "':='", "'+'", 
                     "'-'", "'*'", "'/'", "'<>'", "'='", "'<'", "'>'", "'<='", 
                     "'>='", "'['", "']'", "':'", "'('", "')'", "';'", "'..'", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "BREAK", "CONTINUE", "FOR", "TO", "DOWNTO", 
                      "DO", "IF", "THEN", "ELSE", "RETURN", "WHILE", "BEGIN", 
                      "END", "FUNCTION", "PROCEDURE", "VAR", "TRUE", "FALSE", 
                      "ARRAY", "OF", "REAL", "BOOLEAN", "INTEGER", "STRING", 
                      "NOT", "AND", "OR", "DIV", "MOD", "WITH", "ASSIGNOP", 
                      "ADDOP", "SUBOP", "MULOP", "DIVOP", "NOT_EQUAL", "EQUAL", 
                      "LT", "GT", "LE", "GE", "LSB", "RSB", "COLON", "LB", 
                      "RB", "SEMI", "DOTDOT", "COMMA", "WS", "COMMENT_1", 
                      "COMMENT_2", "COMMENT_3", "IDENT", "INTLIT", "FLOATLIT", 
                      "STRINGLIT", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_vardec = 2
    RULE_onevardec = 3
    RULE_arraytype = 4
    RULE_primitivetype = 5
    RULE_fundec = 6
    RULE_paralist = 7
    RULE_paradec = 8
    RULE_functiontype = 9
    RULE_prodec = 10
    RULE_statement = 11
    RULE_ifstate = 12
    RULE_whilestate = 13
    RULE_forstate = 14
    RULE_breakstate = 15
    RULE_contiSate = 16
    RULE_returnstate = 17
    RULE_withstate = 18
    RULE_callstate = 19
    RULE_compoundstate = 20
    RULE_assignstate = 21
    RULE_lsh = 22
    RULE_scalarvar = 23
    RULE_expression = 24
    RULE_expression1 = 25
    RULE_expression2 = 26
    RULE_expression3 = 27
    RULE_expression4 = 28
    RULE_expression5 = 29
    RULE_operands = 30
    RULE_literal = 31
    RULE_funCall = 32
    RULE_expressionList = 33
    RULE_boollit = 34
    RULE_indexexpr = 35

    ruleNames =  [ "program", "declaration", "vardec", "onevardec", "arraytype", 
                   "primitivetype", "fundec", "paralist", "paradec", "functiontype", 
                   "prodec", "statement", "ifstate", "whilestate", "forstate", 
                   "breakstate", "contiSate", "returnstate", "withstate", 
                   "callstate", "compoundstate", "assignstate", "lsh", "scalarvar", 
                   "expression", "expression1", "expression2", "expression3", 
                   "expression4", "expression5", "operands", "literal", 
                   "funCall", "expressionList", "boollit", "indexexpr" ]

    EOF = Token.EOF
    BREAK=1
    CONTINUE=2
    FOR=3
    TO=4
    DOWNTO=5
    DO=6
    IF=7
    THEN=8
    ELSE=9
    RETURN=10
    WHILE=11
    BEGIN=12
    END=13
    FUNCTION=14
    PROCEDURE=15
    VAR=16
    TRUE=17
    FALSE=18
    ARRAY=19
    OF=20
    REAL=21
    BOOLEAN=22
    INTEGER=23
    STRING=24
    NOT=25
    AND=26
    OR=27
    DIV=28
    MOD=29
    WITH=30
    ASSIGNOP=31
    ADDOP=32
    SUBOP=33
    MULOP=34
    DIVOP=35
    NOT_EQUAL=36
    EQUAL=37
    LT=38
    GT=39
    LE=40
    GE=41
    LSB=42
    RSB=43
    COLON=44
    LB=45
    RB=46
    SEMI=47
    DOTDOT=48
    COMMA=49
    WS=50
    COMMENT_1=51
    COMMENT_2=52
    COMMENT_3=53
    IDENT=54
    INTLIT=55
    FLOATLIT=56
    STRINGLIT=57
    ILLEGAL_ESCAPE=58
    UNCLOSE_STRING=59
    ERROR_CHAR=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MPParser.DeclarationContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 72
                self.declaration()
                self.state = 75 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0)):
                    break

            self.state = 77
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardec(self):
            return self.getTypedRuleContext(MPParser.VardecContext,0)


        def fundec(self):
            return self.getTypedRuleContext(MPParser.FundecContext,0)


        def prodec(self):
            return self.getTypedRuleContext(MPParser.ProdecContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MPParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.vardec()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.fundec()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.prodec()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VardecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def onevardec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.OnevardecContext)
            else:
                return self.getTypedRuleContext(MPParser.OnevardecContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_vardec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardec" ):
                return visitor.visitVardec(self)
            else:
                return visitor.visitChildren(self)




    def vardec(self):

        localctx = MPParser.VardecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(MPParser.VAR)
            self.state = 86 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 85
                self.onevardec()
                self.state = 88 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.IDENT):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OnevardecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.IDENT)
            else:
                return self.getToken(MPParser.IDENT, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def functiontype(self):
            return self.getTypedRuleContext(MPParser.FunctiontypeContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_onevardec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOnevardec" ):
                return visitor.visitOnevardec(self)
            else:
                return visitor.visitChildren(self)




    def onevardec(self):

        localctx = MPParser.OnevardecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_onevardec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(MPParser.IDENT)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 91
                self.match(MPParser.COMMA)
                self.state = 92
                self.match(MPParser.IDENT)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(MPParser.COLON)
            self.state = 99
            self.functiontype()
            self.state = 100
            self.match(MPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArraytypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MPParser.LSB, 0)

        def INTLIT(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.INTLIT)
            else:
                return self.getToken(MPParser.INTLIT, i)

        def DOTDOT(self):
            return self.getToken(MPParser.DOTDOT, 0)

        def RSB(self):
            return self.getToken(MPParser.RSB, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def primitivetype(self):
            return self.getTypedRuleContext(MPParser.PrimitivetypeContext,0)


        def SUBOP(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SUBOP)
            else:
                return self.getToken(MPParser.SUBOP, i)

        def getRuleIndex(self):
            return MPParser.RULE_arraytype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraytype" ):
                return visitor.visitArraytype(self)
            else:
                return visitor.visitChildren(self)




    def arraytype(self):

        localctx = MPParser.ArraytypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arraytype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(MPParser.ARRAY)
            self.state = 103
            self.match(MPParser.LSB)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUBOP:
                self.state = 104
                self.match(MPParser.SUBOP)


            self.state = 107
            self.match(MPParser.INTLIT)
            self.state = 108
            self.match(MPParser.DOTDOT)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUBOP:
                self.state = 109
                self.match(MPParser.SUBOP)


            self.state = 112
            self.match(MPParser.INTLIT)
            self.state = 113
            self.match(MPParser.RSB)
            self.state = 114
            self.match(MPParser.OF)
            self.state = 115
            self.primitivetype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimitivetypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def getRuleIndex(self):
            return MPParser.RULE_primitivetype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitivetype" ):
                return visitor.visitPrimitivetype(self)
            else:
                return visitor.visitChildren(self)




    def primitivetype(self):

        localctx = MPParser.PrimitivetypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_primitivetype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.REAL) | (1 << MPParser.BOOLEAN) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FundecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def IDENT(self):
            return self.getToken(MPParser.IDENT, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def functiontype(self):
            return self.getTypedRuleContext(MPParser.FunctiontypeContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compoundstate(self):
            return self.getTypedRuleContext(MPParser.CompoundstateContext,0)


        def paralist(self):
            return self.getTypedRuleContext(MPParser.ParalistContext,0)


        def vardec(self):
            return self.getTypedRuleContext(MPParser.VardecContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_fundec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFundec" ):
                return visitor.visitFundec(self)
            else:
                return visitor.visitChildren(self)




    def fundec(self):

        localctx = MPParser.FundecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_fundec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(MPParser.FUNCTION)
            self.state = 120
            self.match(MPParser.IDENT)
            self.state = 121
            self.match(MPParser.LB)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.IDENT:
                self.state = 122
                self.paralist()


            self.state = 125
            self.match(MPParser.RB)
            self.state = 126
            self.match(MPParser.COLON)
            self.state = 127
            self.functiontype()
            self.state = 128
            self.match(MPParser.SEMI)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 129
                self.vardec()


            self.state = 132
            self.compoundstate()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParalistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paradec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ParadecContext)
            else:
                return self.getTypedRuleContext(MPParser.ParadecContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_paralist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParalist" ):
                return visitor.visitParalist(self)
            else:
                return visitor.visitChildren(self)




    def paralist(self):

        localctx = MPParser.ParalistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_paralist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.paradec()
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.SEMI:
                self.state = 135
                self.match(MPParser.SEMI)
                self.state = 136
                self.paradec()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParadecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.IDENT)
            else:
                return self.getToken(MPParser.IDENT, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def functiontype(self):
            return self.getTypedRuleContext(MPParser.FunctiontypeContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_paradec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParadec" ):
                return visitor.visitParadec(self)
            else:
                return visitor.visitChildren(self)




    def paradec(self):

        localctx = MPParser.ParadecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paradec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(MPParser.IDENT)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 143
                self.match(MPParser.COMMA)
                self.state = 144
                self.match(MPParser.IDENT)
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 150
            self.match(MPParser.COLON)
            self.state = 151
            self.functiontype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctiontypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitivetype(self):
            return self.getTypedRuleContext(MPParser.PrimitivetypeContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(MPParser.ArraytypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_functiontype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctiontype" ):
                return visitor.visitFunctiontype(self)
            else:
                return visitor.visitChildren(self)




    def functiontype(self):

        localctx = MPParser.FunctiontypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_functiontype)
        try:
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.REAL, MPParser.BOOLEAN, MPParser.INTEGER, MPParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.primitivetype()
                pass
            elif token in [MPParser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.arraytype()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProdecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def IDENT(self):
            return self.getToken(MPParser.IDENT, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compoundstate(self):
            return self.getTypedRuleContext(MPParser.CompoundstateContext,0)


        def paralist(self):
            return self.getTypedRuleContext(MPParser.ParalistContext,0)


        def vardec(self):
            return self.getTypedRuleContext(MPParser.VardecContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_prodec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProdec" ):
                return visitor.visitProdec(self)
            else:
                return visitor.visitChildren(self)




    def prodec(self):

        localctx = MPParser.ProdecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_prodec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(MPParser.PROCEDURE)
            self.state = 158
            self.match(MPParser.IDENT)
            self.state = 159
            self.match(MPParser.LB)
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.IDENT:
                self.state = 160
                self.paralist()


            self.state = 163
            self.match(MPParser.RB)
            self.state = 164
            self.match(MPParser.SEMI)
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 165
                self.vardec()


            self.state = 168
            self.compoundstate()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifstate(self):
            return self.getTypedRuleContext(MPParser.IfstateContext,0)


        def whilestate(self):
            return self.getTypedRuleContext(MPParser.WhilestateContext,0)


        def forstate(self):
            return self.getTypedRuleContext(MPParser.ForstateContext,0)


        def breakstate(self):
            return self.getTypedRuleContext(MPParser.BreakstateContext,0)


        def contiSate(self):
            return self.getTypedRuleContext(MPParser.ContiSateContext,0)


        def returnstate(self):
            return self.getTypedRuleContext(MPParser.ReturnstateContext,0)


        def compoundstate(self):
            return self.getTypedRuleContext(MPParser.CompoundstateContext,0)


        def callstate(self):
            return self.getTypedRuleContext(MPParser.CallstateContext,0)


        def assignstate(self):
            return self.getTypedRuleContext(MPParser.AssignstateContext,0)


        def withstate(self):
            return self.getTypedRuleContext(MPParser.WithstateContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MPParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statement)
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 170
                self.ifstate()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 171
                self.whilestate()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 172
                self.forstate()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 173
                self.breakstate()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 174
                self.contiSate()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 175
                self.returnstate()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 176
                self.compoundstate()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 177
                self.callstate()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 178
                self.assignstate()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 179
                self.withstate()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfstateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
